actualizacion de icon

--- a/chartismo.html
+++ b/chartismo.html
@@ -325,7 +325,7 @@
                      </div>
                   </div>
                   </section>
-                  <section id="documenter-2-4" class="method"> <!--SOPORTES Y RESISTENCIAS->
+                  <section id="documenter-2-4" class="method"> <!--SOPORTES Y RESISTENCIAS-->
                      <div class="method-area">
                         <div class="method-copy">
                            <div class="method-copy-padding">
