--- a/elliot.html
+++ b/elliot.html
@@ -177,7 +177,7 @@
             <section id="documenter-1" class="method">
                <div class="method-area">
                   <div class="method-copy">
-                     <div class="method-copy-padding">
+                     <div style="text-align:justify" class="method-copy-padding">
                         <h4><b>Ralph Nelson Elliott</b></h4>
                         <p>
                           <b>Ralph Nelson Elliott </b>
@@ -228,7 +228,7 @@
 <section id="documenter-2" class="method">
     <div class="method-area">
        <div class="method-copy">
-          <div class="method-copy-padding">
+          <div style="text-align:justify" class="method-copy-padding">
              <h4><b>¿Cómo funcionan las Ondas de Elliott?</b></h4>
            <p>
                    Según Elliott, todos los movimientos del mercado siguen un ritmo repetitivo de <b> cinco ondas en dirección de la tendencia principal, y tres ondas correctivas.</b> <br>
@@ -258,7 +258,7 @@
            <section id="documenter-2-1" class="method">
                <div class="method-area">
                   <div class="method-copy">
-                     <div class="method-copy-padding">
+                     <div style="text-align:justify" class="method-copy-padding">
                          <h4> <b> La teoría de ciclos, siguiendo las Ondas de Elliott</b></h4>
                          <p>
                          Al final de un ciclo, se vuelven a repetir otras cinco ondas en dirección de la tendencia y tres de corrección (movimiento 5-3), todo este ciclo se repite paulatinamente hasta que la tendencia se invierte. <br><br>
@@ -304,7 +304,7 @@
             <section id="documenter-2-2" class="method">
                <div class="method-area">
                   <div class="method-copy">
-                     <div class="method-copy-padding">
+                     <div style="text-align:justify" class="method-copy-padding">
                          <h4> <b> Fibonacci y las Ondas de Elliott</b></h4>
                       <p>
                          Las extensiones y correcciones Fibonacci, aportan un cierto sentido matemático a la teoría de las Ondas de Elliott, y ayudan a localizar puntos donde se podría operar.  <br><br>
@@ -415,7 +415,7 @@
             <section id="documenter-3" class="method">
                <div class="method-area">
                   <div class="method-copy">
-                     <div class="method-copy-padding">
+                     <div style="text-align:justify" class="method-copy-padding">
                     <h4><b>El enfoque fractal. "Un poco de historia"</b></h4>
                       <p> 
                       El término fractal fue acuñado por Benoit Mandelbrot, físico de origen polaco que estudió e inició la era de los fractales en 1975.
@@ -444,7 +444,7 @@
              <section id="documenter-3-1" class="method">
                 <div class="method-area">
                    <div class="method-copy">
-                      <div class="method-copy-padding">
+                      <div style="text-align:justify" class="method-copy-padding">
                         <h4> <b> Formacion de ojetos fractales</b></h4>
                        <p>
                           Los procesos matemáticos para crear las estructuras fractales son iteraciones de reglas simples en los objetos de la inicial. Las mutaciones pequeñas de reglas simples crean una variedad enorme de modelos macroscópicos. La esencia de los fractales es la “retroalimentación”. El punto de partida es una información original, se procesa y se obtiene un resultado. Éste se procesa de nuevo (se itera) y se obtiene otro resultado similar al anterior y se continúa haciendo lo mismo indefinidamente con cada resultado. Los procesos matemáticos que crean las estructuras fractales son iteraciones de reglas simples en objetos iniciales. Un ejemplo que no deja de ser mencionado en toda la literatura sobre los fractales, es la construcción del triángulos de Sierpinski. Se une la mitad de cada lado del triángulo (primera fase), en cada triángulo formado se une la mitad del triángulo formado (segunda fase), y así sucesivamente. <b> Ver figura de la derecha.</b>
@@ -469,7 +469,7 @@
              <section id="documenter-3-2" class="method">
                <div class="method-area">
                   <div class="method-copy">
-                     <div class="method-copy-padding">
+                     <div style="text-align:justify" class="method-copy-padding">
                         <h4> <b>Escalamiento</b></h4>
                       <p>
                         La transformación de similitud y escalamiento consiste en generar una copia similar de un objeto cualquiera en una escala diferente. Para lograr esto, el objeto original se debe afectar por un factor de proporcionalidad, mismo que se denomina factor de escalamiento. De este modo, dos objetos son similares si poseen la misma geometría, aunque tengan diferente tamaño. Esto se puede expresar de una manera general, tal que si tenemos un objeto y se elige una pequeña parte de este objeto y se amplifica con un factor de escalamiento, se observa una geometría idéntica al objeto completo. Si se toma este último objeto y se amplifica nuevamente por el mismo factor de escalamiento, seguramente se obtendrá una geometría similar al objeto original. Esta operación se puede repetir indefinidamente. La propiedad de auto similitud en un fractal matemático se presenta en todo el intervalo de escalas. (Morales, 2004, p.36)
@@ -494,7 +494,7 @@
             <section id="documenter-3-3" class="method">
                <div class="method-area">
                   <div class="method-copy">
-                     <div class="method-copy-padding">
+                     <div style="text-align:justify" class="method-copy-padding">
                         <h4><b>Auto similitud</b></h4>
                       <p>
                          Los fractales autosimilares son estructuras que permanecen invariantes a los cambios de escala, son isotrópicos (tienen las mismas propiedades en todas las direcciones), permanecen invariantes cuando cambia la escala uniformemente en todas las direcciones. 
@@ -518,7 +518,7 @@
             <section id="documenter-3-4" class="method">
                <div class="method-area">
                   <div class="method-copy">
-                     <div class="method-copy-padding">
+                     <div style="text-align:justify" class="method-copy-padding">
                         <h4><b>Auto afinidad</b></h4>
                       <p>
                         Los modelos que representan un sistema fractal tienen auto similitud a un nivel macro y a un nivel micro. Es decir, procesos matemáticos de creación de estructuras fractales son iteraciones de reglas simples de objetos iniciales. Pequeños cambios crean enorme variedad de patrones tanto a nivel micro como a nivel macro. La creatividad de la naturaleza, según parece, viene de este procedimiento iterativo.
@@ -542,7 +542,7 @@
             <section id="documenter-4" class="method">
                <div class="method-area">
                   <div class="method-copy">
-                     <div class="method-copy-padding">
+                     <div style="text-align:justify" class="method-copy-padding">
                         <h3 id="handling-errors"><b>Pautas de Impulso</b></h4>
                         <p>
                            Se llama de esta forma a la secuencia conformada por las ondas 1 a 5. <br><br>
@@ -578,7 +578,7 @@
 			      <section id="documenter-4-1" class="method">
                <div class="method-area">
                   <div class="method-copy">
-                     <div class="method-copy-padding">
+                     <div style="text-align:justify" class="method-copy-padding">
                         <p>
                         <h3><b>ONDA 1</b></h3>
                          <b>Onda (I):</b> La onda (I) raramente manifiesta su intención, son pocos los que la identifican.
@@ -606,7 +606,7 @@
             <section id="documenter-4-2" class="method">
                 <div class="method-area">
                    <div class="method-copy">
-                      <div class="method-copy-padding">
+                      <div style="text-align:justify" class="method-copy-padding">
                          <p>
                          <h3><b>ONDA 2</b></h3>
                          <b> Onda (II):</b> Retroceden gran parte de la onda (I) entre el 50% y el 61.8 incluso mas.
@@ -635,7 +635,7 @@
              <section id="documenter-4-3" class="method">
                 <div class="method-area">
                    <div class="method-copy">
-                      <div class="method-copy-padding">
+                      <div style="text-align:justify" class="method-copy-padding">
                          <p>
                          <h3><b>ONDA 3</b></h3>
                          <b>Onda (III):</b> Es la Onda considerada la mas fuertes, nunca puede ser la onda impulsiva más corta (con respecto a la onda 1 y 5). Su inicio es la que cierra el proceso de acumulación y marca una clara tendencia alcista y la que en su final podemos ver los Climax de compras o marca el (BC) de Wyckoff, siempre y cuando no tengamos una onda 5 extendida.
@@ -663,7 +663,7 @@
              <section id="documenter-4-4" class="method">
                 <div class="method-area">
                    <div class="method-copy">
-                      <div class="method-copy-padding">
+                      <div style="text-align:justify" class="method-copy-padding">
                          <p>
                          <h3><b>ONDA 4</b></h3>
                          <b> Onda IV:</b> Son más predecibles por la ley de la alternancia (debe diferir en complejidad), y signos sutiles de debilidad donde la oferta tiene el control. <br><br>
@@ -687,7 +687,7 @@
                    </div>
                 </div>
                 <div class="method-copy">
-                     <div class="method-copy-padding">
+                     <div style="text-align:justify" class="method-copy-padding">
                       <p>
                         <h3> <b> PATRONES DE TENDENCIA EN ONDA 4 </b><br><br>
                         Triángulo Diagonal tipo 1. Pauta Terminal. </b></h3>
@@ -724,7 +724,7 @@
                 <div class="method-area">
 
                    <div class="method-copy">
-                      <div class="method-copy-padding">
+                      <div style="text-align:justify" class="method-copy-padding">
                          <p>
                          <h3><b>ONDA 5</b></h3>
                          <b>Onda (V):</b> Puede ser extendida (normalmente no), aquí vemos optimismo alto acompañado de noticias buenas, son ondas lentas y reflejan el posible cambio, aquí podemos encontramos con las famosas trampas de mercado UT o UTAD. <br><br>
@@ -746,7 +746,7 @@
                  </div>
                <div class="method-area">
                 <div class="method-copy">
-                  <div class="method-copy-padding">
+                  <div style="text-align:justify" class="method-copy-padding">
                       <p>
                         <h3> <b> PATRONES DE TENDENCIA EN ONDA 5 </b><br><br>
                         Triángulo Diagonal tipo 1. Pauta Terminal. </b></h3>
@@ -784,7 +784,7 @@
 
                 <div class="method-area">
                      <div class="method-copy">
-                           <div class="method-copy-padding">
+                           <div style="text-align:justify" class="method-copy-padding">
                             <p>  <h3> <b> PATRONES DE TENDENCIAS: FALLO EN ONDA 5 . </b> </h3>
                               Un fallo es un patrón impulsivo en el que la quinta onda no excede a la tercera onda. Las quintas ondas, que viajan ligeramente  más allá de la parte superior de la onda 3, también se pueden clasificar como una especie de fallo. Indica que la tendencia es débil y que el mercado mostrará una aceleración en la dirección opuesta.  <br><br>
                               
@@ -821,7 +821,7 @@
             			<section id="documenter-5" class="method">
                            <div class="method-area">
                               <div class="method-copy">
-                                 <div class="method-copy-padding">
+                                 <div style="text-align:justify" class="method-copy-padding">
                                     <h3 id="handling-errors"><b>Ondas de corrección</b></h4>
                                       <p>
                                           En su modelo básico (llamado zig-zag), está conformada por las ondas a, b y c, que a su
@@ -858,7 +858,7 @@
                          <section id="documenter-5-1" class="method">
                            <div class="method-area">
                               <div class="method-copy">
-                                 <div class="method-copy-padding">
+                                 <div style="text-align:justify" class="method-copy-padding">
                                     <h3><b>ONDA DE CORRECCION TIPO "A"</b></h3>
                                     <p>
                                        <b> Onda A:</b> Es la onda mas peligrosa para un cambio de tendencia alcista a Bajista y donde la mayoría de (manos débiles) son cazadas por pensar o predecir que forma parte del impulso de la onda (V), La mayoría cree que es un Pull-back llevados aun por las buenas noticias y la euforia. <br><br>
@@ -880,7 +880,7 @@
                               </div>
                            </div>
                            <div class="method-copy">
-                                 <div class="method-copy-padding">
+                                 <div style="text-align:justify" class="method-copy-padding">
                                   <p>
                                     <h3> <b> PATRONES DE TENDENCIA EN ONDA A </b><br><br>
                                     Triángulo Diagonal tipo 2. Diagonal de inicio. </b></h3>
@@ -916,7 +916,7 @@
                         <section id="documenter-5-2" class="method">
                             <div class="method-area">
                                <div class="method-copy">
-                                  <div class="method-copy-padding">
+                                  <div style="text-align:justify" class="method-copy-padding">
                                      <h3><b>ONDA DE CORRECCION TIPO "B"</b></h3>
                                      <p>
                                        <b> Onda B:</b> Las ondas B alcistas suelen ser la (trampa), es un LPSY (Ultimo punto de apoyo de la oferta) de Wyckoff y donde su retroceso al 100% lo confirma.  <br><br>
@@ -942,7 +942,7 @@
                          <section id="documenter-5-3" class="method">
                             <div class="method-area">
                                <div class="method-copy">
-                                  <div class="method-copy-padding">
+                                  <div style="text-align:justify" class="method-copy-padding">
                                      <h3><b>ONDA DE CORRECCION TIPO "C"</b></h3>
                                      <p>
                                        <b> Onda C:</b> Son terceras ondas y tienen las mismas características, la perforación del (ICE) o zona de trading ranges de Wyckof confirman lo devastadoras que son a la baja. <br><br>
@@ -967,7 +967,7 @@
                             </div>
 
                             <div class="method-copy">
-                                 <div class="method-copy-padding">
+                                 <div style="text-align:justify" class="method-copy-padding">
                                   <p>
                                     <h3> <b> PATRONES DE TENDENCIA EN ONDA C </b><br><br>
                                     Triángulo Diagonal tipo 1. Pauta Terminal. </b></h3>
