actualizacion de patrones armonicos

--- a/chartismo.html
+++ b/chartismo.html
@@ -128,15 +128,18 @@
                            <li><a href="#documenter-3-5">Figuras redondeadas</a></li>
                            <li><a href="#documenter-3-6">Banderas</a></li>
                            <li><a href="#documenter-3-7">Banderines</a></li>
-                           <li><a href="#documenter-3-8">Megafonos</a></li>
+                           <li><a href="#documenter-3-8">Trompeta</a></li>
                         </ol>
                       </li>
                       <li>
                         <a href="#documenter-4"><i class="fa fa-krw" aria-hidden="true"></i></i>Patrones armonicos</a>
                         <ol>
-                           <li><a href="#documenter-4-1">Menu 2-1</a></li>
-                           <li><a href="#documenter-4-2">Menu 2-2</a></li>
-                           <li><a href="#documenter-4-3">Menu 2-3</a></li>
+                           <li><a href="#documenter-4-1">ABCD</a></li>
+                           <li><a href="#documenter-4-2">Gartley</a></li>
+                           <li><a href="#documenter-4-3">Mariposa</a></li>
+                           <li><a href="#documenter-4-4">Murcielago</a></li>
+                           <li><a href="#documenter-4-5">Cangrejo</a></li>
+                           <li><a href="#documenter-4-6">Tiburon</a></li>
                         </ol>
                       </li>
                      <li><a href="./index.html"><i class="fa fa-male"></i>Volver Inicio</a>
@@ -1120,6 +1123,73 @@
                     </div>
                  </div>
                  </section>
+                 <section id="documenter-4-4" class="method">
+                     <div class="method-area">
+                        <div class="method-copy">
+                           <div style="text-align:justify" class="method-copy-padding">
+                             <h3><b>TITULO DEL TEMA</b></h3>
+                             <p>
+                              Contenido de la pagina. 
+                                </p> 
+                       </div>
+                    </div>
+                    <div class="method-example">
+                       <div class="method-example-part">
+                             <h5>Titulo de la imagen</h5>
+                             <p> <img src="images/contruccion.jpg" alt="titulo de la imagen" onclick="Zoom(this)">  </p>
+                            <blockquote class="darker-grey">
+                               <p><a href="https://es.wikipedia.org">https://es.wikipedia.org/</a>.</p>
+                               <footer>Si quieres mas informacion visita esta pagina</cite></footer>
+                            </blockquote>
+                          </div>
+                        </div>
+                     </div>
+                     </section>
+                     <section id="documenter-4-5" class="method">
+                        <div class="method-area">
+                           <div class="method-copy">
+                              <div style="text-align:justify" class="method-copy-padding">
+                                <h3><b>TITULO DEL TEMA</b></h3>
+                                <p>
+                                 Contenido de la pagina. 
+                                   </p> 
+                          </div>
+                       </div>
+                       <div class="method-example">
+                          <div class="method-example-part">
+                                <h5>Titulo de la imagen</h5>
+                                <p> <img src="images/contruccion.jpg" alt="titulo de la imagen" onclick="Zoom(this)">  </p>
+                               <blockquote class="darker-grey">
+                                  <p><a href="https://es.wikipedia.org">https://es.wikipedia.org/</a>.</p>
+                                  <footer>Si quieres mas informacion visita esta pagina</cite></footer>
+                               </blockquote>
+                             </div>
+                           </div>
+                        </div>
+                        </section>
+                        <section id="documenter-4-6" class="method">
+                           <div class="method-area">
+                              <div class="method-copy">
+                                 <div style="text-align:justify" class="method-copy-padding">
+                                   <h3><b>TITULO DEL TEMA</b></h3>
+                                   <p>
+                                    Contenido de la pagina. 
+                                      </p> 
+                             </div>
+                          </div>
+                          <div class="method-example">
+                             <div class="method-example-part">
+                                   <h5>Titulo de la imagen</h5>
+                                   <p> <img src="images/contruccion.jpg" alt="titulo de la imagen" onclick="Zoom(this)">  </p>
+                                  <blockquote class="darker-grey">
+                                     <p><a href="https://es.wikipedia.org">https://es.wikipedia.org/</a>.</p>
+                                     <footer>Si quieres mas informacion visita esta pagina</cite></footer>
+                                  </blockquote>
+                                </div>
+                              </div>
+                           </div>
+                           </section>
+
 <!-- fin del cuarto articulo-->  
 
 <!-- FIN DEL CONTENIDO DE LA PAGINA-->
