inici contenito adminicos

--- a/chartismo.html
+++ b/chartismo.html
@@ -102,7 +102,7 @@
             </div>
          </div>
          <!-- End header service -->
-         <!-- Sidebar -->
+         <!-- Sidebar --><!-- Menu lateral -->
          <div id="documenter_sidebar">
             <div id="scrollholder" class="scrollholder">
                <div id="scroll" class="scroll">
@@ -1035,22 +1035,27 @@
                               </section>
 <!-- fin del tercero articulo-->  
 <!-- inicio del cuarto articulo-->
-<section id="documenter-4" class="method">
+<section id="documenter-4" class="method"><!--CHARTISMO ARMONICO-->
    <div class="method-area">
       <div class="method-copy">
          <div style="text-align:justify" class="method-copy-padding">
-           <h3><b>TITULO DEL TEMA</b></h3>
+           <h3><b>Los Patrones Armónicos</b></h3>
            <p>
-            Contenido de la pagina. 
+            Los patrones armónicos de precios elevan el concepto de las formaciones geométricas de precios al siguiente nivel mediante el uso de los números de Fibonacci para definir puntos de inflexión precisos en el mercado. A diferencia de otros métodos de negociación, el trading armónico intenta predecir los movimientos futuros de los precios con mayor precisión con base en una serie de relaciones numéricas. Este concepto presenta un gran contraste con los métodos comunes y más populares que son reaccionarios y no predictivos ante la acción del precio.  <br><br>
+
+            <h5><b>¿Qué es el trading armónico?</b></h5>
+            El trading armónico es una metodología que utiliza el reconocimiento de patrones de precios específicos y la alineación de relaciones de Fibonacci exactas para determinar puntos de alta probabilidad de cambios de tendencia en los mercados financieros. Este enfoque asume que los patrones o ciclos en los mercados, tal como muchos patrones y ciclos en la vida, se repiten así mismos de manera regular. La clave está en la identificación de estos patrones, y la apertura o cierre de una posición con base en una alta probabilidad de que la misma acción del precio histórica va a volver a ocurrir. <br><br>
+            El principio más importante y útil dentro del enfoque del Trading Armónico es la habilidad de diferenciar varios tipos de movimientos cíclicos del precio que se adhieren a condiciones específicas en cuanto a estructura y relaciones numéricas. Las variaciones del precio representan ciclos de crecimiento (alzas en el mercado) y declives (caídas en el mercado). De forma similar a muchos procesos de crecimiento y decrecimiento cíclicos en la vida, estos movimientos pueden ser cuantificados por medio de las relaciones relativas que presentan basadas en las razones o ratios de Fibonacci y analizados para definir situaciones técnicas únicas. <br><br>
+            La psicología de masas es la razón principal por la cual estos patrones funcionan muchas veces.
               </p> 
      </div>
   </div>
   <div class="method-example">
      <div class="method-example-part">
-           <h5>Titulo de la imagen</h5>
-           <p> <img src="images/contruccion.jpg" alt="titulo de la imagen" onclick="Zoom(this)">  </p>
+           <h5>Patrones Armónicos</h5>
+           <p> <img src="fotos/armonicos/patrones-armonicos-trading2.jpg" alt="patrones armonicos" onclick="Zoom(this)">  </p>
           <blockquote class="darker-grey">
-             <p><a href="https://es.wikipedia.org">https://es.wikipedia.org/</a>.</p>
+             <p><a href="https://en.wikipedia.org/wiki/Chart_pattern">https://es.wikipedia.org/</a>.</p>
              <footer>Si quieres mas informacion visita esta pagina</cite></footer>
           </blockquote>
         </div>
