Patrón Armónico ABCD

--- a/chartismo.html
+++ b/chartismo.html
@@ -1062,24 +1062,41 @@
       </div>
    </div>
 </section>
-          <section id="documenter-4-1" class="method">
+          <section id="documenter-4-1" class="method"><!--CHARTISMO ARMONICO-->
            <div class="method-area">
               <div class="method-copy">
                  <div style="text-align:justify" class="method-copy-padding">
-                   <h3><b>TITULO DEL TEMA</b></h3>
+                   <h3><b>Patrón Armónico ABCD</b></h3>
                    <p>
-                    Contenido de la pagina. 
+                     El patrón <b> ABCD </b> es una formación de inversión del precio que ayuda a identificar los momentos en que el mercado está a punto de cambiar de dirección. Es uno de los patrones armónicos clásicos , y uno de los primeros en ser identificados <b> (fue descubierto originalmente por H.M Gartley).</b> La idea detrás de este patrón es que se puede comprar cuando los precios son bajos y están a punto de subir (versión alcista del patrón), o vender cuando los precios son altos pero están a punto de caer. <br><br>
+                     El patrón armónico <b>ABCD</b> está formado por 4 puntos denominados <b> A, B, C y D.</b>  Estos puntos definen un estilo o patrón repetitivo de movimiento del precio en el mercado el cual puede encontrarse en todos (o en casi todos) los marcos de tiempo y en todos (o casi todos) los mercados.<br><br>
+
+                     <h5><b>Relaciones de Fibonacci en el patrón AB = CD</b></h5>
+                     El patrón gráfico AB = CD debe ajustarse a las relaciones específicas de Fibonacci. A continuación encontrará una lista de los niveles de Fibonacci, que están asociados con el patrón de negociación AB = CD. <br><br>
+                     
+                    <b>  Hay dos reglas de Fibonacci asociadas con la figura AB=CD: <br></b>
+                   <li>                                
+                     <li>a) BC es el 61.8% de retroceso de Fibonacci de AB.</li>
+                     <li>b) CD es el 127.2% de la extensión de Fibonacci de BC.</li>  
+                  </li>
+
                       </p> 
              </div>
           </div>
           <div class="method-example">
              <div class="method-example-part">
-                   <h5>Titulo de la imagen</h5>
-                   <p> <img src="images/contruccion.jpg" alt="titulo de la imagen" onclick="Zoom(this)">  </p>
+                   <h5>Patrón Armónico ABCD alcista</h5>
+                   <p> <img src="fotos/armonicos/ABCD-alcista.jpg" alt="Patrón Armónico ABCD" onclick="Zoom(this)">  </p>
                   <blockquote class="darker-grey">
-                     <p><a href="https://es.wikipedia.org">https://es.wikipedia.org/</a>.</p>
+                     <p><a href="https://www.tradingview.com/wiki/ABCD_Pattern">https://www.tradingview.com/wiki/</a>.</p>
                      <footer>Si quieres mas informacion visita esta pagina</cite></footer>
                   </blockquote>
+                  <h5>Patrón Armónico ABCD bajista</h5>
+                  <p> <img src="fotos/armonicos/ABCD-bajista.jpg" alt="Patrón Armónico ABCD" onclick="Zoom(this)">  </p>
+                 <blockquote class="darker-grey">
+                  <p><a href="https://www.tradingview.com/wiki/ABCD_Pattern">https://www.tradingview.com/wiki/</a>.</p>
+                    <footer>Si quieres mas informacion visita esta pagina</cite></footer>
+                 </blockquote>
                 </div>
               </div>
            </div>
