actualizacion de menus

--- a/velas.html
+++ b/velas.html
@@ -51,11 +51,20 @@
                               <li class="dx-nav-0-item ">
                                  <a class="dx-nav-0-link" href="./wyckoff.html">Wyckoff</a>
                               </li>
-                              <li class="dx-nav-0-item ">
+                              <li class="dx-nav-0-item e">
                                  <a class="dx-nav-0-link" href="./elliot.html">Elliot</a>
                               </li> 
-                              <li class="dx-nav-0-item dx-nav-active">
+                              <li class="dx-nav-0-item ">
+                                 <a class="dx-nav-0-link" href="javascript:void(0);">Fibbonaci</a>
+                              </li>
+                              <li class="dx-nav-0-item ">
                                  <a class="dx-nav-0-link" href="./chartismo.html">Chartismo</a>
+                              </li>
+                              <li class="dx-nav-0-item ">
+                                 <a class="dx-nav-0-link" href="javascript:void(0);">Armónico</a>
+                              </li>
+                              <li class="dx-nav-0-item dx-nav-activ">
+                                 <a class="dx-nav-0-link" href="javascript:void(0);">Velas</a>
                               </li>
                            </ul>
                         </div>
