--- a/index.html
+++ b/index.html
@@ -45,18 +45,27 @@
                      <div class="header__nav">
                         <div class="header__nav--left">
                           <ul class="dx-nav-0 dx-nav-0-docs">
-                            <li class="dx-nav-0-item dx-nav-active">
-                               <a class="dx-nav-0-link" href="./index.html">Fundamentos</a>
-                            </li>
-                            <li class="dx-nav-0-item ">
-                               <a class="dx-nav-0-link" href="./wyckoff.html">Wyckoff</a>
-                            </li>
-                            <li class="dx-nav-0-item ">
-                               <a class="dx-nav-0-link" href="./elliot.html">Elliot</a>
-                            </li>
-                            <li class="dx-nav-0-item ">
-                              <a class="dx-nav-0-link" href="./chartismo.html">Chartismo</a>
-                           </li>
+                              <li class="dx-nav-0-item dx-nav-active">
+                                 <a class="dx-nav-0-link" href="./index.html">Fundamentos</a>
+                              </li>
+                              <li class="dx-nav-0-item ">
+                                 <a class="dx-nav-0-link" href="./wyckoff.html">Wyckoff</a>
+                              </li>
+                              <li class="dx-nav-0-item ">
+                                 <a class="dx-nav-0-link" href="./elliot.html">Elliot</a>
+                              </li> 
+                              <li class="dx-nav-0-item ">
+                                 <a class="dx-nav-0-link" href="javascript:void(0);">Fibbonaci</a>
+                              </li>
+                              <li class="dx-nav-0-item ">
+                                 <a class="dx-nav-0-link" href="./chartismo.html">Chartismo</a>
+                              </li>
+                              <li class="dx-nav-0-item ">
+                                 <a class="dx-nav-0-link" href="javascript:void(0);">Armónico</a>
+                              </li>
+                              <li class="dx-nav-0-item ">
+                                 <a class="dx-nav-0-link" href="javascript:void(0);">Velas</a>
+                              </li>
                           </ul>
                         </div>
                         <div class="header__nav--right hidden-xs">
