--- a/patrones-elliot.html
+++ b/patrones-elliot.html
@@ -53,9 +53,18 @@
                               </li>
                               <li class="dx-nav-0-item dx-nav-active">
                                  <a class="dx-nav-0-link" href="./elliot.html">Elliot</a>
+                              </li> 
+                              <li class="dx-nav-0-item ">
+                                 <a class="dx-nav-0-link" href="javascript:void(0);">Fibbonaci</a>
                               </li>
                               <li class="dx-nav-0-item ">
                                  <a class="dx-nav-0-link" href="./chartismo.html">Chartismo</a>
+                              </li>
+                              <li class="dx-nav-0-item ">
+                                 <a class="dx-nav-0-link" href="javascript:void(0);">Armónico</a>
+                              </li>
+                              <li class="dx-nav-0-item ">
+                                 <a class="dx-nav-0-link" href="javascript:void(0);">Velas</a>
                               </li>
                            </ul>
                         </div>
